updating project and authentication app name

--- a/ui/templates/ui/about.html
+++ b/ui/templates/ui/about.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <div class="main">
-    <h1>About Samify</h1>
+    <h1>About AsyncMLEngine</h1>
     <p>This is the about page of the site. Explore our features and learn more about us.</p>
 </div>
 {% endblock %}
