--- a/ui/templates/ui/home.html
+++ b/ui/templates/ui/home.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <div class="main">
-    <h1>Welcome to Samify</h1>
+    <h1>Welcome to AsyncMLEngine</h1>
     <p>This is the homepage of the site. Explore our features and learn more about us.</p>
 </div>
 {% endblock %}
