--- a/ui/templates/ui/home.html
+++ b/ui/templates/ui/home.html
@@ -7,4 +7,77 @@
     <h1>Welcome to AsyncMLEngine</h1>
     <p>This is the homepage of the site. Explore our features and learn more about us.</p>
 </div>
+<!-- <div class="features">
+    <a href="{% url 'enqueue_task' %}">Click here</a>
+</div> -->
+{% if request.user.is_authenticated %}
+<button id="fetchButton">Start Sample Task</button>
+<div id="result"></div>
+<br>
+<button id="fetchRecentTasksButton">Show Recent Tasks</button>
+<div id="recentTasksList"></div>
+{% endif %}
+<script>
+    document.getElementById('fetchButton').addEventListener('click', function () {
+        var xhr = new XMLHttpRequest();
+        document.getElementById('result').innerHTML = `<p>Loading...</p>`;
+        xhr.open('GET', '{% url "enqueue_task" %}', true);
+        console.log("something");
+        xhr.onload = function () {
+            if (xhr.status >= 200 && xhr.status < 300) {
+                // Success!
+                var response = JSON.parse(xhr.responseText);
+                console.log(response);
+                if (response.status === 'queued') {
+                    document.getElementById('result').innerHTML = `<p>Task ${response.id} queued successfully</p>`;
+                } else {
+                    document.getElementById('result').innerHTML = `<p>Task ${response.id}:: ${response.status}</p>`;
+                }
+                // document.getElementById('result').innerHTML = `<p>${response.id}: ${response.status}</p>`;
+            } else {
+                // We reached our target server, but it returned an error
+                console.error("Server returned error");
+            }
+        };
+        xhr.onerror = function () {
+            // There was a connection error of some sort
+            console.error("Connection error");
+        };
+        xhr.send();
+    });
+    document.getElementById('fetchRecentTasksButton').addEventListener('click', function () {
+        var xhr = new XMLHttpRequest();
+        document.getElementById('recentTasksList').innerHTML = `<p>Loading recent tasks...</p>`;
+        xhr.open('GET', '{% url "recent_tasks" %}', true);
+        xhr.onload = function () {
+            if (xhr.status >= 200 && xhr.status < 300) {
+                var tasks = JSON.parse(xhr.responseText);
+                var content = `<table border="1"><tr>
+                           <th style="padding: 8px;">Task ID</th>
+                           <th style="padding: 8px;">Created At</th>
+                           <th style="padding: 8px;">Updated At</th>
+                           <th style="padding: 8px;">Status</th>
+                           <th style="padding: 8px;">Result</th>
+                           </tr>`;
+                tasks.forEach(function (task) {
+                    content += `<tr>
+                            <td style="padding: 8px;">${task.id}</td>
+                            <td style="padding: 8px;">${task.created_at}</td>
+                            <td style="padding: 8px;">${task.updated_at}</td>
+                            <td style="padding: 8px;">${task.status}</td>
+                            <td style="padding: 8px;">${task.result}</td>
+                            </tr>`;
+                });
+                content += `</table>`;
+                document.getElementById('recentTasksList').innerHTML = content;
+            } else {
+                console.error("Server returned error");
+            }
+        };
+        xhr.onerror = function () {
+            console.error("Connection error");
+        };
+        xhr.send();
+    });
+</script>
 {% endblock %}
